Fix bug in Softmax routine's meta data
The Softmax routine's meta data in maths.ini did not include the
required Types unit in the value of the Units key.

Fixes #61

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -2009,7 +2009,7 @@ DisplayName=Softmax
 DescEx="<p>Applies the <a href="https://en.wikipedia.org/wiki/Softmax_function"><em>softmax</em></a> function to each element of floating point array <var>A</var> and normalizes them into a probability distribution proportional to the exponentials of the elements of <var>A</var>. The normalised values are returned as an array of the same size as <var>A</var>.</p><p>An <var>EArgumentException</var> exception is raised if <var>A</var> is empty.</p>"
 Extra="<p>The <em>softmax</em> function is often used in statistics and in machine learning. It is closely related to the <em>log-sum-exp</em> (aka <em>LSE</em>) function since, for vector <strong>x</strong>=(x1,...,xn), <em>softmax(<strong>x</strong>)=exp[<strong>x</strong>&#8722;LSE(<strong>x</strong>)]</em>.</p>"
 Kind=routine
-Units=SysUtils
+Units=SysUtils,Types
 Depends=LSE
 SeeAlso=LSE,MaxOfArray_Double
 TestInfo=advanced
@@ -2018,7 +2018,7 @@ AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tes
 Snip=664.dat
 DelphiXE=Y
 Delphi12A=Y
-Delphi13F=N
+Delphi13F=Y
 
 [Median_Double]
 DisplayName="Median (Double overload)"
